src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/c4A01.cd
/* (c) https://github.com/MontiCore/monticore */

package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram c4A01 {

}
